# Heart-disease

./: .gitignore  BaselineModel.ipynb  DataCollection.ipynb  DataExploration.ipynb  EDA.ipynb  FeatureEngineering.ipynb  ModelInterpretation.ipynb  ModelSelection.ipynb  README.md  heart_disease_classification-random_forest-v1.joblib  pyproject.toml
data-preprocessing/: DataCollection.ipynb  DataExploration.ipynb  FeatureEngineering.ipynb
deployment/: heart-disease-streamlit.py  heart_disease_app.py  heart_disease_batch.py  heart_disease_batch_sample.csv  heart_disease_form.py
modeling/: BaselineModel.ipynb  ModelInterpretation.ipynb  ModelSelection.ipynb
pipeline/: basic-training-pipeline.py
pipeline/models/: heart_disease_lr_model.joblib  heart_disease_rf_model.joblib
