[project]
name = "heart-disease"
version = "0.1.0"
description = "This project is an end-to-end Data Science pipeline focused on predicting heart disease based on patient attributes. Using machine learning techniques, I will analyze and extract valuable insights from the dataset to aid in understanding and diagnosing heart disease."
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
